kubernetes/observability/k8s-monitoring/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alloy
  namespace: k8s-monitoring
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https-alloy
  hostnames:
    - "alloy.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: k8s-monitoring-alloy-metrics-cluster
          port: 12345
